@@ -81,6 +81,9 @@
 /* Define if you have the getrusage function.  */
 #undef HAVE_GETRUSAGE
 
+/* Define if you have the getsysinfo function.  */
+#undef HAVE_GETSYSINFO
+
 /* Define if you have the gettimeofday function.  */
 #undef HAVE_GETTIMEOFDAY
 
@@ -180,6 +183,12 @@
 /* Define if you have the sysconf function.  */
 #undef HAVE_SYSCONF
 
+/* Define if you have the sysmp function.  */
+#undef HAVE_SYSMP
+
+/* Define if you have the table function.  */
+#undef HAVE_TABLE
+
 /* Define if you have the times function.  */
 #undef HAVE_TIMES
 
@@ -210,6 +219,9 @@
 /* Define if you have the <limits.h> header file.  */
 #undef HAVE_LIMITS_H
 
+/* Define if you have the <machine/hal_sysinfo.h> header file.  */
+#undef HAVE_MACHINE_HAL_SYSINFO_H
+
 /* Define if you have the <stdlib.h> header file.  */
 #undef HAVE_STDLIB_H
 
@@ -236,6 +248,15 @@
 
 /* Define if you have the <sys/stat.h> header file.  */
 #undef HAVE_SYS_STAT_H
+
+/* Define if you have the <sys/sysinfo.h> header file.  */
+#undef HAVE_SYS_SYSINFO_H
+
+/* Define if you have the <sys/sysmp.h> header file.  */
+#undef HAVE_SYS_SYSMP_H
+
+/* Define if you have the <sys/table.h> header file.  */
+#undef HAVE_SYS_TABLE_H
 
 /* Define if you have the <sys/time.h> header file.  */
 #undef HAVE_SYS_TIME_H
